@startuml
title UC05: Class Diagram - Xem chi tiết và Liên hệ

package "Web/API Layer" {
    class PropertyController {
        +getPropertyDetails(id: UUID): ResponseEntity<PropertyDetailsDTO>
        +sendMessage(dto: MessageRequestDTO): ResponseEntity<Void>
    }
}

package "DTO Layer" {
    class PropertyDetailsDTO {
        +id: UUID
        +title: String
        +price: BigDecimal
        +address: String
        +hostInfo: HostDTO
        +images: List<String>
    }
    class MessageRequestDTO {
        +propertyId: UUID
        +senderName: String
        +content: String
    }
}

package "Service/Logic Layer" {
    class PropertyService {
        -repo: PropertyRepository
        +findById(id: UUID): Property
    }
    class MessageService {
        -repo: MessageRepository
        -notifiers: List<MessageNotifier>
        +sendMessage(data: MessageRequestDTO)
    }
    
    interface MessageNotifier <<Observer>> {
        +notify(message: Message)
    }
    
    class HostEmailNotifier {
        +notify(message: Message)
    }
}

package "Domain/Entity Layer" {
    class Property <<Entity>> {
        +id: UUID
        +title: String
        +description: String
        +monthlyPrice: BigDecimal
        +status: PropertyStatus
        +addressLine: String
    }
    
    enum PropertyStatus <<State>> {
        DRAFT
        PENDING
        APPROVED
        REJECTED
        HIDDEN
        DELETED
    }
    
    class User <<Entity>> {
        +id: UUID
        +fullName: String
        +email: String
        +phone: String
    }
    
    class PropertyImage <<Entity>> {
        +id: UUID
        +imageUrl: String
        +isThumbnail: boolean
    }
    
    class Message <<Entity>> {
        +id: UUID
        +senderName: String
        +content: String
        +createdAt: OffsetDateTime
    }
}

' Relationships
PropertyController --> PropertyService
PropertyController --> MessageService

PropertyService --> PropertyDetailsDTO
MessageService --> MessageRequestDTO

Property *-- PropertyImage : 1..*
Property o-- User : 1 (Host)
Message o-- Property : 1
Message o-- User : 1 (Recipient/Host)

MessageService --> MessageNotifier : notifies
HostEmailNotifier ..|> MessageNotifier

Property --> PropertyStatus : has

@enduml
